fix tablet other pages gaps after header

--- a/css/about.css
+++ b/css/about.css
@@ -158,7 +158,7 @@
   .about_text_container {
     max-width: 689px;
     padding: 0;
-    padding-top: 64px;
+    padding-top: 86px;
   }
 
   .about_main_title {
