--- a/css/contact.css
+++ b/css/contact.css
@@ -250,7 +250,7 @@
     width: 543px;
     height: 178px;
     padding: 0;
-    margin-bottom: 44px;
+    margin: 85px 0 44px;
   }
 
   .contact__field,
