--- a/css/pricing.css
+++ b/css/pricing.css
@@ -171,6 +171,7 @@ hr {
   }
   .pricing__header {
     padding-bottom: 57px;
+    padding-top: 86px;
     letter-spacing: -0.37px;
     line-height: 56px;
     font-size: 48px;
